--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write --experimental-cli src/"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.23",
     "@tailwindcss/vite": "^4.1.18",
     "axios": "^1.13.4",
     "pinia": "^3.0.4",
